--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       href="https://cdn.jsdelivr.net/npm/font-applesdgothicneo@1.0.3/css/all.min.css"
     />
 
-    <title>React App</title>
+    <title>🎋 항해99 대나무숲 🎋</title>
   </head>
 
   <body>
